# picoshell

./: CMakeLists.txt  C_Shell.cpp  C_Shell.hpp  README.md  start.cpp
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/: CMakeLists.txt
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/ff15/documents/res/: app2.c
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/ff15/source/: ff.c  ff.h
lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: hw_config.c  sd_card.c  sd_card.h  spi.c
lib/no-OS-FatFS-SD-SPI-RPi-Pico/test/example/: FatFS_SPI_example.cpp
